# chip8rust

./: .gitignore  Cargo.toml
src/: chip8.rs  main.rs
