[package]
name = "CHIP8"
version = "0.1.0"
authors = ["francesco"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
glib-sys = ""


[dependencies.gtk]
version = ""
features = ["v3_16"]


[dependencies.gio]
version = ""
features = ["v2_44"]